test: add tests for content routing

--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "cids": "~0.5.3",
     "dirty-chai": "^2.0.1",
     "electron-webrtc": "~0.3.0",
-    "libp2p-circuit": "^0.2.1",
-    "libp2p-delegated-content-routing": "github:libp2p/js-libp2p-delegated-content-routing#master",
+    "libp2p-circuit": "~0.2.1",
+    "libp2p-delegated-content-routing": "github:libp2p/js-libp2p-delegated-content-routing#fix/tests",
     "libp2p-delegated-peer-routing": "github:libp2p/js-libp2p-delegated-peer-routing#master",
     "libp2p-kad-dht": "~0.10.1",
     "libp2p-mdns": "~0.12.0",
